<resources>
    <string name="app_name">ExpenseManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="credit">Income</string>
    <string name="credits">Incomes</string>
    <string name="account">Account</string>
    <string name="debit">Expense</string>
    <string name="debits">Expenses</string>
    <string name="add_new_transaction">New Entry</string>
    <string name="amount">Amount</string>
    <string name="done">Done</string>
    <string name="pending">Pending</string>
    <string name="save">Save</string>
    <string name="required">Required!</string>
    <string name="delete">Delete</string>
    <string name="transaction_detail">Detail</string>
    <string name="name">Name</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="proceed">Proceed</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="description_optional">Description (Optional)</string>
</resources>
